[gd_scene load_steps=3 format=3 uid="uid://bu27vm7wqya25"]

[ext_resource type="Script" path="res://App/Scenes/Entities/Components/hover_popup_info.gd" id="1_xelwl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n2c6t"]
size = Vector2(128, 128)

[node name="HoverPopupInfo" type="Node2D"]
script = ExtResource("1_xelwl")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_n2c6t")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
